# riftline-cli

./: .gitignore  LICENSE  README.md  __init__.py  cli.py  export.py  git_diff.py  graph.py  parser.py  pyproject.toml  resolver.py  riftline-SRS (1).md  riftline-project-summary (1).md  testmapper.py
.claude/: settings.json
.github/workflows/: ci.yml  pr-impact.yml
docs/: benchmark-results.md  bug-audit.md  dogfood-results.md  self-scan.mmd
fixtures/broken_syntax_pkg/: good_a.py  good_b.py
fixtures/diff_repo/: .gitkeep
fixtures/mi_pkg/: __init__.py  animals.py
fixtures/mini_pkg/: app.py  core.py  main.py  utils.py
fixtures/oop_pkg/: __init__.py  base.py  derived.py
fixtures/reexport_pkg/: __init__.py  caller.py  core.py
fixtures/reexport_pkg/subpkg/: __init__.py  utils.py
fixtures/synthetic_pkg/: api.py  cli.py
fixtures/synthetic_pkg/core/: math_ops.py
fixtures/synthetic_pkg/processing/: transformers.py  validators.py
fixtures/synthetic_pkg/shared/: constants.py
fixtures/testmapped_pkg/: orphan.py
fixtures/testmapped_pkg/tests/: test_core.py
riftline/: __init__.py  graph.py  parser.py  resolver.py
scripts/: benchmark.py
tests/: test_diff.py  test_export.py  test_graph.py  test_parser.py  test_property_import_resolution.py  test_testmapper.py
